test/org/midica/testfiles/failing/chord-name-like-percussion.midica
INCLUDE inc/instruments.midica
CHORD hhc c/d/e
